--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.9",
+    "expo": "^54.0.20",
     "expo-blur": "~14.1.4",
     "expo-camera": "^16.1.6",
     "expo-constants": "~17.1.6",
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "eas-cli": "^16.13.3",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
