--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "backgroundColor": "#0a0f14",
-    "userInterfaceStyle": "automatic",
+    "userInterfaceStyle": "dark",
     "name": "wsei-lab-mobile",
     "slug": "wsei-lab-mobile",
     "version": "1.0.0",
@@ -24,14 +24,13 @@
       "package": "com.elkolorado.fusionworldscanner"
     },
     "androidStatusBar": {
-      "backgroundColor": "#0a0f14",
-      "barStyle": "light-content",
-      "translucent": true
+      "barStyle": "light",
+      "backgroundColor": "#000000"
     },
     "androidNavigationBar": {
-      "backgroundColor": "#0a0f14",
+      "visible": "always",
       "barStyle": "light",
-      "translucent": true
+      "backgroundColor": "#000000"
     },
     "web": {
       "bundler": "metro",
@@ -39,24 +38,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#0a1f2e"
-        }
-      ],
-      [
-        "expo-navigation-bar",
-        {
-          "backgroundColor": "#0a0f14",
-          "barStyle": "light",
-          "position": "relative"
-        }
-      ]
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
